Chore: Update number of items in list layout and fix the download button dropdown position bug

--- a/Resources/public/scss/_box.scss
+++ b/Resources/public/scss/_box.scss
@@ -67,5 +67,11 @@
     }
 
     .btn + .btn{ margin-left: 5px; }
-
 }
+
+.box-footer .form-inline{
+    .btn-group.open{ position: relative; }
+    .control-label, .select2-container{
+        display: none;
+    }
+} 
