--- a/Resources/public/scss/theme.scss
+++ b/Resources/public/scss/theme.scss
@@ -4,7 +4,7 @@
 @import 'box';
 @import 'alert';
 @import 'table';
-
+@import 'pagination';
 
 .skin-just  {
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif!important;
