Feature: form labels, button padding, form action buttons.

--- a/Resources/public/scss/theme.scss
+++ b/Resources/public/scss/theme.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 @import 'navbar';
 @import 'button';
+@import 'forms';
 @import 'box';
 @import 'alert';
 @import 'table';
@@ -140,4 +141,3 @@
 {
     border-radius: 0!important;
 }
-
