--- a/Resources/public/scss/_table.scss
+++ b/Resources/public/scss/_table.scss
@@ -16,3 +16,7 @@ table.sonata-ba-list tr td a{
 th.sonata-ba-list-field-header-order-desc a, th.sonata-ba-list-field-header-order-asc a{
     color: #000;
 }
+//selected row
+.table-striped tbody tr.sonata-ba-list-row-selected td, .table-striped tbody tr.sonata-ba-list-row-selected th {
+	background-color: #ddd;
+}
