Feature: nav borders gone, table row color adjusted. Font color tables adjusted.

--- a/Resources/public/scss/_box.scss
+++ b/Resources/public/scss/_box.scss
@@ -6,7 +6,9 @@
         border-top-color: #ebebeb;
     }
 }
-
+.box-footer {
+    padding: 1.375rem;
+}
 .tab-pane .box{ border: 0; }
 
 .nav-tabs-custom{
