--- a/Resources/public/scss/theme.scss
+++ b/Resources/public/scss/theme.scss
@@ -10,6 +10,7 @@
 
 html {
     -webkit-font-smoothing: antialiased;
+    word-break: break-all;
 }
 body, .content-wrapper, .right-side, .wrapper {
     background-color: #ebebeb;
