--- a/Resources/public/scss/_navbar.scss
+++ b/Resources/public/scss/_navbar.scss
@@ -28,10 +28,6 @@
 .skin-just .wrapper, .skin-just .main-sidebar, .skin-just .left-side {
     background-color: $primary-color;
 }
-.skin-just .main-sidebar {
-    // max-width: 32rem;
-    // width: auto;
-}
 .skin-just .sidebar-form input[type="text"], .skin-just .sidebar-form .btn{
     background-color: #222;
 }
@@ -70,7 +66,7 @@ body.fixed .content-header .navbar.stuck {
     padding: 0;
     padding-bottom: 1em;
     a {
-        color: #fff;
+        color: #ccc;
         padding: 0.25em 1em 0.25em 3em;
     }
     li {
