--- a/Resources/public/scss/_forms.scss
+++ b/Resources/public/scss/_forms.scss
@@ -22,7 +22,7 @@ label {
 @media only screen and (min-width: 50em) {
 	.sonata-ba-form-actions {
 		.btn-danger {
-			position: absolute;
+			position: fixed;
 	    	right: 4em;
 		}
 	}
