--- a/Resources/public/scss/_table.scss
+++ b/Resources/public/scss/_table.scss
@@ -1,4 +1,4 @@
-table.sonata-ba-list th{
+table.sonata-ba-list th {
     background-image: none;
 }
 
@@ -10,7 +10,7 @@ table.sonata-ba-list th{
     }
 }
 
-table.sonata-ba-list tr td a{
+table.sonata-ba-list tr td a {
     color: #888;
     &:hover{
         color: #000;
@@ -23,7 +23,10 @@ th.sonata-ba-list-field-header-order-desc a, th.sonata-ba-list-field-header-orde
 
 .table-bordered>thead>tr>th, .table-bordered>tbody>tr>th, .table-bordered>tfoot>tr>th, .table-bordered>thead>tr>td, .table-bordered>tbody>tr>td, .table-bordered>tfoot>tr>td{
     border: 1px solid transparent;
-    padding: 1.375rem 12px;
+    padding: 1.375em;
+}
+td.sonata-ba-list-field.sonata-ba-list-field-currency, td.sonata-ba-list-field.sonata-ba-list-field-percent, td.sonata-ba-list-field.sonata-ba-list-field-integer {
+	text-align: left;
 }
 .table-striped>tbody>tr:nth-of-type(odd) {
 	background-color: #f2f2f2;
@@ -31,8 +34,4 @@ th.sonata-ba-list-field-header-order-desc a, th.sonata-ba-list-field-header-orde
 .table-striped tbody tr.sonata-ba-list-row-selected td, .table-striped tbody tr.sonata-ba-list-row-selected th {
 	background-color: #ddd;
 }
-@media screen and (min-width: 48em) {
-	.box-body>.table {
-		table-layout: fixed;
-	}
-}
+.label { font-size: 100%; border-radius: 0; }
