--- a/Resources/public/scss/theme.scss
+++ b/Resources/public/scss/theme.scss
@@ -34,9 +34,9 @@ body, .content-wrapper, .right-side, .wrapper {
 .required:after{ color: $danger; font-size: 1.3em; line-height: 0;}
 
 .logo img{ display: none; }
-.content-wrapper{     
-    .content-header{
-        .nav.navbar-right.btn-group{ display: none; }
+.content-wrapper {     
+    .content-header {
+        .nav.navbar-right.btn-group { display: none; }
     }
 }
 
@@ -143,6 +143,7 @@ body, .content-wrapper, .right-side, .wrapper {
 }
 
 label ~ input[type="submit"] { margin: 0 0.5em; }
+
 @media screen and (min-width: 50em) {
     .content-wrapper {
         padding-right: 50px;
@@ -151,6 +152,9 @@ label ~ input[type="submit"] { margin: 0 0.5em; }
         overflow: visible;
         overflow-x: visible;
     }
-
-
+}
+@media screen and (min-width: 80em) {
+    // .content-wrapper {
+    //     max-width: 80rem;
+    // }
 }
