Feature: tabs font size.

--- a/Resources/public/scss/_box.scss
+++ b/Resources/public/scss/_box.scss
@@ -45,8 +45,9 @@
 
 .nav-tabs-custom>.nav-tabs>li>a{
     padding: 20px 25px;
+    font-size: 1.5em;
+    font-weight: bold;
 }
-
 .nav-tabs-custom>.nav-tabs li + li{
     border-left: 1px solid #ddd;
     margin-right: 0;
