Chore: Add red color to has-errors class (empty required input)

--- a/Resources/public/scss/_box.scss
+++ b/Resources/public/scss/_box.scss
@@ -15,6 +15,10 @@
     border-radius: 0;
 }
 
+.nav-tabs-custom .has-errors{
+    color: $danger;
+}
+
 .nav-tabs-custom>.nav-tabs{
     border-top-right-radius: 0px;
     border-top-left-radius: 0px;
