--- a/Resources/public/scss/_navbar.scss
+++ b/Resources/public/scss/_navbar.scss
@@ -100,6 +100,11 @@ body.fixed .content-header .navbar.stuck {
 }
 .breadcrumb li:first-child {
     line-height: 1;
+    a {
+        font-size: 1.3em;
+        text-align: center;
+        padding-right: 0.85em;
+    }
 }
 .breadcrumb, .breadcrumb > .active {
     color: #000000!important;
@@ -125,6 +130,13 @@ body.fixed .content-header .navbar.stuck {
     position: relative;
     text-align: center;
     min-height: 0;
+}
+.breadcrumb li > a {
+    transition: color 0.1s;
+    &:hover, &:focus, &:active {
+        background-color: transparent !important;
+        color: #666 !important;
+    }
 }
 
 .navbar-default .navbar-brand {
