--- a/Resources/public/scss/_box.scss
+++ b/Resources/public/scss/_box.scss
@@ -1,3 +1,5 @@
+$side-width: 315px;
+
 .box{
     border: 1px solid #ebebeb;
     box-shadow: none;
@@ -44,7 +46,7 @@
 }
 
 .nav-tabs-custom>.nav-tabs>li>a{
-    padding: 20px 25px;
+    padding: 10px 15px;
     font-size: 1.5em;
     font-weight: bold;
 }
@@ -65,9 +67,7 @@
     margin: 0!important;
     border-radius: 0;
     font-size: 0;
-    @media(min-width: 768px){
-        left: 230px;
-    }
+ 
 
     .btn + .btn{ margin-left: 5px; }
 }
@@ -79,3 +79,31 @@
     }
     select + .btn{ margin: 0 0 0 15px; }
 } 
+
+.content-header > .sticky-wrapper {
+    height: auto !important;
+}
+
+@media screen and (min-width: 50em) {
+     .nav-tabs-custom>.nav-tabs>li>a {
+        padding: 1em 2.1428571429em;
+    }
+}
+
+@media screen and (min-width: 95em) {
+  .sidebar-collapse .main-sidebar, .sidebar-collapse .left-side {
+        transform: translate(-$side-width, 0);
+    }
+    .main-header .logo, .main-sidebar, .left-side {
+        width: $side-width;
+    }
+    .main-header .navbar {
+        margin-left: $side-width;
+    }
+    .form-actions {
+         left: $side-width;
+
+
+    }
+   
+}
