--- a/Resources/public/scss/_navbar.scss
+++ b/Resources/public/scss/_navbar.scss
@@ -94,19 +94,29 @@ body.fixed .content-header .navbar.stuck {
         }
     }
 }
-
+.navbar {
+    border-radius: 0;
+}
 .navbar.navbar-default {
     background-color: #FFFFFF;
     margin-bottom: -1.1em;
     border: none;
-    padding-top: 2em;
-    padding-bottom: 2em;
     margin-top: -1.1em;
-    padding-left: 2.1428571429em;
-    padding-right: 2.1428571429em;
     width: auto !important;
 }
-
+.navbar-default .navbar-brand {
+    color: #000000;
+    display: inline-block;
+    float: none;
+    font-size: 2.5em;
+    font-weight: bold;
+    height: auto;
+    line-height: 1;
+    padding: 0;
+}
+.navbar-header {
+    padding: 2.5em 3.1428571429em;
+}
 body.fixed .content-header .navbar.stuck {
     border-radius: 0;
     margin-left: 0;
@@ -114,12 +124,6 @@ body.fixed .content-header .navbar.stuck {
     top: auto;
     width: auto !important;
     z-index: 1;
-}
-
-
-
-.navbar {
-    border-radius: 0;
 }
 
 .breadcrumb li {
@@ -165,22 +169,6 @@ body.fixed .content-header .navbar.stuck {
         color: #666 !important;
     }
 }
-
-.navbar-default .navbar-brand {
-    color: #000000;
-    display: inline-block;
-    float: none;
-    font-size: 2.5em;
-    font-weight: bold;
-    height: auto;
-    line-height: 1;
-    padding: 0;
-}
-.navbar-header {
-    padding: 1em;
-}
-
-
 
 @media screen and (min-width: 50em) {
     .nav-tabs-custom>.nav-tabs>li>a {
