--- a/Resources/public/scss/_box.scss
+++ b/Resources/public/scss/_box.scss
@@ -1,6 +1,4 @@
-$side-width: 315px;
-
-.box{
+.box {
     border: 1px solid #ebebeb;
     box-shadow: none;
     border-radius: 0;
@@ -11,71 +9,6 @@ $side-width: 315px;
 .box-footer {
     padding: 1.375em;
 }
-.tab-pane .box{ border: 0; }
-
-.nav-tabs-custom{
-    border-radius: 0;
-}
-
-.nav-tabs-custom .has-errors{
-    color: $danger;
-}
-
-.nav-tabs-custom>.nav-tabs{
-    border-top-right-radius: 0px;
-    border-top-left-radius: 0px;
-}
-
-.nav-tabs-custom>.nav-tabs>li.active{
-    border-top-color: #000;
-}
-
-.nav-tabs-custom>.nav-tabs>li.active>a, .nav-tabs-custom>.nav-tabs>li:hover>a{
-    background-color: #f2f2f2;
-    color: #000;
-}
-
-.nav-tabs-custom>.nav-tabs>li.active>a, .nav-tabs-custom>.nav-tabs>li.active:hover>a{
-    background-color: #f2f2f2;
-}
-
-.nav-tabs-custom>.nav-tabs li a:active{
-    box-shadow: inset 0 0 1em rgba(0, 0, 0, 0.2);
-}
-
-.nav-tabs-custom>.nav-tabs>li{ 
-    border-top: 0;
-    margin-right: 0;
-    margin-bottom: 0;
-}
-
-.nav-tabs-custom>.nav-tabs>li>a{
-    padding: 10px 15px;
-    font-size: 1.5em;
-    font-weight: bold;
-}
-.nav-tabs-custom>.nav-tabs li + li{
-    border-left: 1px solid #ddd;
-    margin-right: 0;
-}
-
-.sonata-ba-form{
-    margin: 0 0 85px 0;
-}
-.form-actions{
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    z-index: 5;
-    margin: 0!important;
-    border-radius: 0;
-    font-size: 0;
- 
-
-    .btn + .btn{ margin-left: 5px; }
-}
-
 .box-footer .form-inline{
     .btn-group.open{ position: relative; }
     .control-label, .select2-container{
@@ -83,31 +16,19 @@ $side-width: 315px;
     }
     select + .btn{ margin: 0 0 0 15px; }
 } 
-
-.content-header > .sticky-wrapper {
-    height: auto !important;
+.tab-pane .box {
+    border: 0;
 }
-
-@media screen and (min-width: 50em) {
-     .nav-tabs-custom>.nav-tabs>li>a {
-        padding: 1em 2.1428571429em;
+.sonata-ba-form {
+    
+    .box {
+        background-color: #F2F2F2;
+    }
+    .box-body {
+        margin: 0;
+        padding: 0;
     }
 }
-
-@media screen and (min-width: 95em) {
-  .sidebar-collapse .main-sidebar, .sidebar-collapse .left-side {
-        transform: translate(-$side-width, 0);
-    }
-    .main-header .logo, .main-sidebar, .left-side {
-        width: $side-width;
-    }
-    .main-header .navbar {
-        margin-left: $side-width;
-    }
-    .form-actions {
-         left: $side-width;
-
-
-    }
-   
+.box-header {
+    display: none;
 }
