Chore: border color and makes sure the width of the content-header is correct

--- a/Resources/public/scss/_tabs.scss
+++ b/Resources/public/scss/_tabs.scss
@@ -44,7 +44,7 @@
     font-weight: bold;
 }
 .nav-tabs-custom>.nav-tabs li + li{
-    border-left: 1px solid #ddd;
+    border-left: 1px solid #f2f2f2;
     margin-right: 0;
 }
 
