--- a/Resources/public/scss/_article.scss
+++ b/Resources/public/scss/_article.scss
@@ -11,18 +11,25 @@
 .container-fluid:after {
 	clear: both;
 }
+.content-header { 
+	padding: 15px 16px 0 16px;
+}
 
 //unstick titel container on article detail
-body.fixed .content-header .navbar.stuck {
-    border-radius: 0;
-    margin-left: 0;
-    position: relative;
-    top: auto;
-    width: auto !important;
-    z-index: 1;
+body.fixed .content-header .navbar {
+	width: auto !important;
+	&.stuck {
+		border-radius: 0;
+		margin-left: 0;
+		position: relative;
+		top: auto;
+		width: auto !important;
+		z-index: 1;
+	}
+	.content-header > .sticky-wrapper {
+		height: auto !important;
+	}
 }
-.content-header > .sticky-wrapper {
-    height: auto !important;
-}
+
 
 
