--- a/Resources/public/scss/_tabs.scss
+++ b/Resources/public/scss/_tabs.scss
@@ -20,7 +20,7 @@
 }
 
 .nav-tabs-custom>.nav-tabs>li.active>a, .nav-tabs-custom>.nav-tabs>li:hover>a{
-    background-color: #f2f2f2;
+    background-color: #ddd;
     color: #000;
 }
 
@@ -29,6 +29,7 @@
 }
 
 .nav-tabs-custom>.nav-tabs li a:active{
+    background-color: #ddd;
     box-shadow: none;
 }
 
