Feature: margin select, focus border select2, heioght select2.

--- a/Resources/public/scss/_box.scss
+++ b/Resources/public/scss/_box.scss
@@ -14,7 +14,7 @@
     .control-label, .select2-container{
         // display: none;
     }
-    select + .btn{ margin: 0 0 0 15px; }
+    // select + .btn{ margin: 0 0 0 15px; }
 } 
 .tab-pane .box {
     border: 0;
