--- a/Resources/public/scss/_button.scss
+++ b/Resources/public/scss/_button.scss
@@ -1,4 +1,3 @@
-
 .btn {
     border-radius: 0;
     padding: .8em 1.1em;
@@ -73,7 +72,7 @@
         border-color: darken($danger,15%);
     }
 
-    i{
+    i {
         display: block;
         font-size: 20px;
         position: absolute;
@@ -82,4 +81,8 @@
         left: 0;
         right: 0;
     }
+}
+
+.btn-group.open .dropdown-toggle {
+    box-shadow: none;
 }
