--- a/Resources/public/scss/_pagination.scss
+++ b/Resources/public/scss/_pagination.scss
@@ -1,11 +1,24 @@
-.pagination>li>a, .pagination>li>span{
-	background-color: transparent; 
-    border: 0;
-    padding: 0.8em 1.05em;
-    line-height: 1;
-}
-.pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>a:hover, .pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover{
-    background-color: #000;
-    border-color: #000;
+.pagination > li > a,
+.pagination > li > span {
+	background-color: transparent;
+	border: 0;
+	padding: 0.8em 1.05em;
+	line-height: 1;
 }
 
+.pagination > .active > a,
+.pagination > .active > a:focus,
+.pagination > .active > a:hover,
+.pagination > .active > span,
+.pagination > .active > span:focus,
+.pagination > .active > span:hover {
+	background-color: #000;
+	border-color: #000;
+}
+
+.pagination > li > a:focus,
+.pagination > li > a:hover,
+.pagination > li > span:focus,
+.pagination > li > span:hover {
+	color: #666;
+}
