--- a/Resources/public/scss/_button.scss
+++ b/Resources/public/scss/_button.scss
@@ -12,13 +12,13 @@
 .btn-primary, .btn-success {
     background-color: #000;
     border-color: #000;
-    &:hover{
+    &:hover, &:focus, &:active {
         background-color: lighten(#000, 20%);
         border-color: lighten(#000, 20%);
     }
 }
 
-.btn-danger{
+.btn-danger {
     background-color: $danger;
     border-color: $danger;
     &:hover, &:focus, &:active {
