--- a/Resources/public/scss/_pagination.scss
+++ b/Resources/public/scss/_pagination.scss
@@ -22,3 +22,8 @@
 .pagination > li > span:hover {
 	color: #666;
 }
+
+.pagination>li:first-child>a, .pagination>li:first-child>span,
+.pagination>li:last-child>a, .pagination>li:last-child>span{
+	border-radius: 0!important;
+}
