Feature: styling popover.

--- a/Resources/public/scss/_button.scss
+++ b/Resources/public/scss/_button.scss
@@ -8,6 +8,9 @@
         display: none;
     }
 }
+.editable-buttons .btn i {
+    display: block;
+}
 
 .btn-primary, .btn-success {
     background-color: #000;
