--- a/Resources/public/scss/_navbar.scss
+++ b/Resources/public/scss/_navbar.scss
@@ -103,7 +103,11 @@
 .navbar-header {
     padding: 1em;
 }
-
+@media screen and (min-width: 48em) {
+    .sidebar-toggle {
+        display: none;
+    }
+}
 @media screen and (min-width: 50em) {
     .navbar-default .navbar-brand {
         font-size: 3.5em;
